--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               width="360"
               height="230"
             >
-              <rect width="360" height="230" rx="15.4011" fill="#16084C" />
+              <rect width="360" height="230" rx="15.4011" fill="#16084C" />                   
             </mask>
             <g mask="url(#mask0_3_2547)">
               <g filter="url(#filter0_f_3_2547)">
@@ -105,7 +105,7 @@
           <span><img src="/cc-icon.svg" alt="ícone padrão de cartão" /></span>
           <span
             ><img
-              src="/cc-visa.svg"
+              src="/cc-default.svg"
               alt="ícone do cartão de crédito selecionado"
           /></span>
         </div>
@@ -155,7 +155,7 @@
           </div>
         </div>
 
-        <button>ADICIONAR CARTÃO</button>
+        <button id="add-card">ADICIONAR CARTÃO</button>
       </form>
     </div>
 
